# SkillRunes

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
skillrunes/: __init__.py  __main__.py  cli.py  client.py  config.py  extract.py  models.py  store.py  synthesize.py  utils.py
skillrunes/dashboard/: __init__.py  server.py
skillrunes/dashboard/templates/: index.html
skillrunes/ingest/: __init__.py  base.py  claude_code.py  codex.py
tests/: test_providers.py
tests/fixtures/: mock_session.jsonl
