[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillrunes"
version = "0.1.0"
description = "Analyze coding-agent session transcripts and recursively improve a SKILL.md file"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["agents", "ai", "cli", "observability", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "anthropic>=0.28",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
skillrunes = "skillrunes.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["skillrunes"]

[tool.hatch.build.targets.wheel.force-include]
"skillrunes/dashboard/templates" = "skillrunes/dashboard/templates"
"skillrunes/dashboard/static" = "skillrunes/dashboard/static"

[tool.hatch.build.targets.sdist]
include = [
    "skillrunes/",
    "README.md",
    "pyproject.toml",
]
